backend: propagate error columns through feedback score CTEs